<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <ImageView
            android:layout_width="@dimen/margin_150"
            android:layout_height="@dimen/margin_60"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/margin_10"
            android:src="@drawable/welcome"/>

        <TextView
            android:textSize="@dimen/size_10"
            android:layout_marginTop="@dimen/margin_30"
            android:gravity="center"
            android:layout_gravity="center"
            android:text="@string/dear_woloo_host"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <TextView
            android:textSize="@dimen/size_10"
            android:layout_margin="@dimen/margin_5"
            android:gravity="center"
            android:layout_gravity="center"
            android:text="@string/become_host_msg"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="@dimen/margin_7"
            android:paddingBottom="@dimen/margin_7"
            android:paddingLeft="@dimen/margin_15"
            android:paddingRight="@dimen/margin_15"
            android:background="@drawable/rounded_corner_button"
            android:textColor="@color/white"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/margin_30"
            android:text="@string/yes_i_am_interested"/>

    </LinearLayout>







</LinearLayout>