<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="@dimen/margin_100"
    android:layout_height="wrap_content"
    android:padding="@dimen/margin_10"
    android:orientation="vertical"
    android:layout_gravity="center"
    android:background="@drawable/new_button_background"
    android:backgroundTint="@color/white_95"
    android:elevation="@dimen/_4sdp">

    <in.woloo.www.application_kotlin.utilities.CenturyGoticBoldTextView
        android:text="@string/congratulations"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/dialog_style_big"
        android:textColor="@color/black"
        android:layout_gravity="center"
        android:id="@+id/tv_congratulations"/>

    <ImageView
        android:layout_width="@dimen/margin_30"
        android:layout_height="@dimen/margin_30"
        android:layout_gravity="center"
        android:layout_marginBottom="@dimen/margin_10"
        android:src="@drawable/success"
        android:layout_marginTop="@dimen/_15sdp"
        />


    <in.woloo.www.application_kotlin.utilities.CenturyGoticBoldTextView
        android:id="@+id/tv_paymentsuccess"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
       style="@style/twelve_black_nomargin_center"
        android:layout_gravity="center"
        android:maxLines="3"
        android:layout_marginHorizontal="@dimen/_15sdp"
        android:text="@string/payment_successfull" />


    <in.woloo.www.application_kotlin.utilities.CenturyGoticBoldTextView
        android:id="@+id/btnCloseDialog"
        android:text="@string/OKAY"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        style="@style/dialog_button_text_style"
        android:layout_marginVertical="@dimen/_20sdp"
        android:background="@drawable/yellow_rectangle_shape"/>

</LinearLayout>